Fix logo spacing on mobile

--- a/_scss/_navigation.scss
+++ b/_scss/_navigation.scss
@@ -61,6 +61,7 @@
         }
         @media (max-width: $breakpoint-md) {
             margin-right: 0px;
+            margin-top: 14px;
         }
     }
     &__menu {
